# test_pypi_example

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml
scr/test_pypi_example/: __init__.py  function_example.py
src/test_pypi_example/: __init__.py  function_example.py
tests/: test_func.py
