[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test-pypi-example-samuelvitor"
version = "0.0.1"
description = "A simple example package"
authors = [
    { name="Samuel", email="samuk_saraiva@hotmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/test_pypi_example"

[tool.setuptools]
packages = ["test_pypi_example"]
package-dir = {"" = "scr"}