[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "test-pypi-example-samuelvitor"
version = "0.0.2"
description = "A simple example package"
authors = [
    { name="Samuel", email="samuk_saraiva@hotmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

# Dev tools go here
[project.optional-dependencies]
ci = ["test-pypi-example-samuelvitor[dev]"]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "black",
    "ruff>=0.11.11",
]

[project.urls]
Homepage = "https://github.com/samuelvitorsaraiva/test_pypi_example"

[tool.setuptools]
packages = ["test_pypi_example"]
package-dir = {"" = "src"}

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"

[tool.ruff]
line-length = 120
# Allow imports relative to the "src" and "test" directories.
src = ["src", "test"]
lint.per-file-ignores."__init__.py" = ["F403"]